[b]Version 0.6.6[/b]:

(2008-11-23)
 * Added a history to the open URL dialog. Based on a patch by Francesco 
   Cosoleto.
   Not finished yet. Missing options to clear the history or set the maximum
   number of items.
 * Added a new option for smplayer.ini: urls\max_items (section [history]).
   It specifies the maximum number of items for the open URL history.
   By default, 10. Set it to 0 to disable the history.

(2008-11-20)
 * The "Recents" code has been reorganized. Also the list of recent files
   is now saved in a different place in smplayer.ini, in section [history].

(2008-11-19)
 * When using SSA/ASS, use the same font for OSD. Otherwise the OSD
   might not be visible.

(2008-11-18)
 * Added the possibility to select the type of proxy to be used: Http or
   Socks5. (More info: http://doc.trolltech.com/4.3/qnetworkproxy.html)

(2008-11-17)
 * Added a new option in Preferences->Subtitle: Freetype support. Disabling
   that option could make smplayer work with a mplayer compiled without
   freetype support. But subtitles may not work at all!

(2008-11-16)
 * The mini gui can now also remember the position and size of the window.
 * (Linux) Now all devices which match with dvd*, cdrom*, cdrw*, sr* 
   and cdrecorder* are added to the comboboxes in Preferences->Drives.

(2008-11-15)
 * Added a new action to select the next aspect ratio. Assigned by default to
   key "A". Unfortunately this change breaks compatibility and the aspect
   ratio setting for all your played videos will be lost.
 * Display the text for the statusbar in the OSD if in fullscreen mode (and
   not paused).
 * Added a new option for smplayer.ini: initial_stereo_mode. It sets the
   stereo mode which will be used as default. 
   Possible values: 0 (stereo), 1 (left) and 2 (right).

(2008-11-14)
 * Added the new section Advanced->Proxy in preferences to configure the 
   proxy.

(2008-11-13)
 * Added some options in smplayer.ini (section [proxy]) to configure a proxy 