@@ -83,6 +83,7 @@ public:
 	bool use_soft_video_eq;
 	bool use_slices;
 	int autoq; 	//!< Postprocessing quality
+	bool add_blackborders_on_fullscreen;
 
 	// Audio
 	bool use_soft_vol;
